# StudioOS

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/commands/: clients.rs  github.rs  image_compress.rs  log.rs  mod.rs  persistence.rs  site.rs
src-tauri/src/models/: client.rs  log_entry.rs  mod.rs  persistence.rs
src/components/: ErrorBoundary.tsx  KeyboardShortcuts.tsx
src/components/ui/: Badge.tsx  Button.tsx  EditSlotModal.tsx  Tabs.tsx  ToastContainer.tsx  UpdateChecker.tsx
src/layout/: DashboardLayout.tsx
src/lib/: github.ts  i18n.ts  logger.ts  persistence.ts  siteSync.ts
src/lib/siteBuilder/: renderer.ts
src/locales/: en.json  pt.json
src/store/: usePortfolioStore.ts  useSettingsStore.ts  useSiteStore.ts
src/types/: index.ts  site.ts
src/views/: ClientsView.tsx  DashboardView.tsx  FinanceView.tsx  GalleryManager.tsx  LogsView.tsx  QueueView.tsx  SettingsView.tsx  SiteBuilderView.tsx
