[package]
name = "studioos"
version = "2.0.0"
description = "StudioOS - Portfolio & Commission Manager"
authors = ["StudioOS Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.88.0"

[lib]
name = "studioos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Logging & Tracing
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
log = "0.4"

# Async
tokio = { version = "1", features = ["full"] }

# Data & Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

# Filesystem
directories = "5"

# CSV Export
csv = "1"

# HTTP Client with retry
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"

# Rate limiting
governor = "0.8"

# Image compression
image = { version = "0.25", features = ["jpeg", "png", "webp"] }

# Lazy statics
lazy_static = "1"

# Encryption for secrets
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
